feat: Enhance K8s Auto Installer with new features and unit tests
- Added a comprehensive feature documentation for K8s Auto Installer outlining current and planned features.
- Refactored app.js to expose functions to the window object for better testability.
- Implemented unit tests for app.js covering initialization, form handling, installation progress, and alerts.
- Added setupTests.js to enable fetch mocking for unit tests.
- Improved error handling and user feedback in various functions.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,13 @@
   "type": "commonjs",
   "devDependencies": {
     "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5"
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-fetch-mock": "^3.0.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/public/js/setupTests.js"
+    ]
   }
 }
