--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         python-version: '3.9'
 
     - name: Install backend dependencies
-      run: pip install -r backend/requirments/dev.txt
+      run: pip install -r backend/requirements/dev.txt
       working-directory: backend
 
     - name: Run backend tests
